- Players under lv-5 cannot throw items (anti-cheeze).

25/11/2001 (Tanix [log by Jir])
- Shallow dungeon levels won't be static (configurable).
- NO_GHOST / PRESERVE_DEATH_LEVEL options

27/11/2001 (Jir)
- Optimization in auto_retaliate (observable :)

29/11/2001 (Jir)
- Admin commands: /static-level, /unstatic-level (/sta, /unst)
- Client suppresses repeated messages.
- 12 more vaults borrowed from ZAngband (thx, the creators!)
- 3 original vaults. Also, 2 'Between Vaults' are now normal vaults.
- DM can now specify vault 128-255 by number.

30/11/2001 (Jir)
- lv-req can handle {0} stuffs from stores.
- 4 'Pattern vaults' are commented out. 5 more original vaults.
- Bug in new auto-retaliator code is fixed(thx Moltor for report).

01/12/2001 (Jir)
- lv-req is now based on both item's quality and depth.
- User commands: /dispose(dis), /tag  Admin commands: /id, /geno
- Shopkeepers beat down prices for items with high lv-req.
- Fixed bug in steal-fury ('neutral' was handled as a party).
- You can no longer know the lv-req of unknown items.

02/12/2001 (Jir)
- Fortune cookie ported from PernA (by Mihi).
- Bugfix on /dis. Added /untag.
- Newbie(lv5-) no longer drops items when stealing fails.(thx Tanix)
- 138 new cookies added.

03/12/2001 (Jir)
- hibernation/annoucement/auto-off for AFK-mode.
- 't' won't disturb players' running (but still cannot start running).

05/12/2001 (Jir)
- Coloured cookie.
- Allow URL on chat (eg. http://www.pernmangband.net/)
- Admin command /wish
- Client tries to use META_ADDRESS_2 in case.

06/12/2001 (Jir)
- Ego monsters. [version no. is 3.2.2 now]

07/12/2001 (Jir)
- Trap Detection won't reveal all the traps.
- Bugfixes for ego monsters.
- Total of 22+2 ego-monster types.

08/12/2001 (Jir)
- More megos and bugfixes.
- wizard/DM should use console password from now on.
- SPELL_INTERFERE option in *.cfg.
- Failing to cast a spell takes a turn now.
- wizard/DM can view all the players' inventory via "'".